test/error/unm1.luau
local v = nil
print(-v)
